# s2l-rl

./: .gitignore  README.md  convert_data.py  grader.py  pyproject.toml
runs/: test.sh
src/s2l_rl/: compute_loss.py  data.py  grader.py  main.py  policy.py  run.py  worker.py
